# rust-embedded

./: Embed.toml
custom-led-lighting/: Cargo.toml  diagram.json  wokwi.toml
custom-led-lighting/src/: main.rs
i2c/: Cargo.toml
i2c/src/: accel_reading.rs  main.rs  read_register_main.rs
led-compass/: Cargo.toml
led-compass/src/: led.rs  main.rs  xmain.rs
led-roulette/: Cargo.toml  Embed.toml  README.md  _target
led-roulette/src/: main.rs  main_old.rs
punch-o-meter/: Cargo.toml
punch-o-meter/src/: main.rs  solution.rs
ser-blinky/: Cargo.toml  diagram.json  wokwi.toml
ser-blinky-bar/: Cargo.toml  diagram.json  wokwi.toml
ser-blinky-bar/src/: main.rs
ser-blinky-timer/: Cargo.toml  diagram.json  wokwi.toml
ser-blinky-timer/src/: main.rs
ser-blinky/src/: main.rs
ser-button-counter/: Cargo.toml  diagram.json  wokwi.toml
ser-button-counter/src/: main.rs
ser-keypad/: Cargo.toml  diagram.json  wokwi.toml
ser-keypad-detector/: Cargo.toml
ser-keypad/src/: main.rs
ser-light-sensor/: Cargo.toml  diagram.json  wokwi.toml
ser-light-sensor/src/: main.rs
ser-pir-sensor/: Cargo.toml  diagram.json  wokwi.toml
ser-pir-sensor/src/: main.rs
ser-pulse-monitor-v2/: Cargo.toml  wokwi.toml
ser-pulse-monitor-v2/src/: main.rs
ser-pulse-width-monitor/: Cargo.toml  wokwi.toml
ser-pulse-width-monitor/src/: main.rs
ser-pwm-led/: Cargo.toml  diagram.json  wokwi.toml
ser-pwm-led/.cargo/: config.toml
ser-pwm-led/src/: main.rs
ser-real-time-timer/: Cargo.toml  wokwi.toml
ser-real-time-timer/src/: main.rs
ser-temp-sensor/: Cargo.toml  diagram.json  wokwi.toml
ser-temp-sensor/src/: main.rs
ser-voltmeter/: Cargo.toml  diagram.json  wokwi.toml
ser-voltmeter/src/: main.rs
ser-volume-ledbar/: Cargo.toml  diagram.json  wokwi.toml
ser-volume-ledbar/src/: main.rs
ser-whack-a-mole/: Cargo.toml  diagram.json  wokwi.toml
ser-whack-a-mole/src/: led_pins.rs  main.rs  timers.rs
snake-game/: Cargo.toml
snake-game/src/: game.rs  main.rs  snake.rs  utils.rs
snake-game/src/game/: controls.rs  display.rs  mod.rs  snake.rs  utils.rs
src/: main.rs
uart/: Cargo.toml
uart/src/: main.rs
