[package]
name = "punch-o-meter"
version = "0.1.0"
authors = ["Anosike Osifo <code.anosikeoisfo@gmail.com>"]
edition = "2021"

[dependencies.microbit-v2]
version = "0.12.0"
optional = true

[dependencies.microbit]
version = "0.12.0"
optional = true

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
#panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
nb = "1.0.0"
heapless = "0.7.10"
embedded-hal = "0.2.6"
lsm303agr = "0.2.2"
libm = "0.2.1"

[dev-dependencies]
# Sneak in dependencies for examples which clash with panic-hal when generating
# docs with rustdoc.
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }


[features]
v2 = ["microbit-v2"]