[package]
name = "ser-button-counter"
version = "0.1.0"
authors = ["Anosike Osifo <code.anosikeosifo@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "ser-button-counter"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]

experimental = ["esp-idf-svc/experimental"]
pio = ["esp-idf-svc/pio"]
std = ["esp-idf-svc/binstart", "alloc", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

[build-dependencies]
embuild = "0.33"
