[package]
name = "snake-game"
version = "1.0.0"
edition = "2021"

[dependencies.microbit-v2]
version = "0.13.0"
optional = true

[dependencies.microbit]
version = "0.13.0"
optional = true

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
heapless = "0.8.0"
embedded-hal = "0.2.6"
lsm303agr = "0.2.2"
libm = "0.2.1"

[dev-dependencies]
# Sneak in dependencies for examples which clash with panic-hal when generating
# docs with rustdoc.
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }

[features]
v2 = ["microbit-v2"]